исправление ошибок валидации и фильтрации
